# Project_Playgrounds

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/Sustainibilty_Test_09-2022/: DFQ_SustainibilityUseCase.ipynb
notebooks/Sustainibilty_Test_09-2022/data/: Emissionfactor_region_quantity_per_Resource_ESG.csv  ProductDB_ESG.csv  Resource_per_ProductDB_ESG.csv  Supplier_per_Resource_ESG.csv  Supplier_quantity_per_Resource_ESG.csv
scripts/: poetry-update.py
