[tool.poetry]
name = "default"
version = "0.1.0"
description = ""
authors = ["Yannick Aaron Lehr <yannick.lehr@ioki.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.20.0"
pylint = "^2.15.2"
black = "^22.8.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
ipykernel = "^6.15.2"
toml = "^0.10.2"
nbqa = "^1.4.0"
pyupgrade = "^2.37.3"
pandas = "^1.4.4"
dash = "^2.6.1"
jupyter-dash = "^0.4.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pylint = "^2.11.1"
mypy = "^0.971"
pytest = "^7.1.3"
black = "^22.3.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
coverage = "^6.1.2"
ipykernel = "^6.6.0"
ipynbname = "^2021.3.2"
notebook = "^6.4.8"
toml = "^0.10.2"
nbqa = "^1.3.1"
pyupgrade = "^2.31.1"
ipywidgets = "^8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
target-version = ['py37', 'py38']
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 100
